; ModuleID = '/home/carl/AnghaBench/tig/src/extr_options.c_parse_encoding.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_options.c_parse_encoding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.encoding = type { i32 }

@SIZEOF_STR = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.encoding**, i8*, i32)* @parse_encoding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_encoding(%struct.encoding** %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.encoding**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.encoding*, align 8
  %12 = alloca i32, align 4
  store %struct.encoding** %0, %struct.encoding*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %13 = load i32, i32* @SIZEOF_STR, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %8, align 8
  %16 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %9, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = trunc i64 %14 to i32
  %19 = call i32 @parse_string(i8* %16, i8* %17, i32 %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* @SUCCESS, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %41

23:                                               ; preds = %3
  %24 = load %struct.encoding**, %struct.encoding*** %5, align 8
  %25 = load %struct.encoding*, %struct.encoding** %24, align 8
  store %struct.encoding* %25, %struct.encoding** %11, align 8
  %26 = load %struct.encoding*, %struct.encoding** %11, align 8
  %27 = icmp ne %struct.encoding* %26, null
  br i1 %27, label %28, label %33

28:                                               ; preds = %23
  %29 = load i32, i32* %7, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %33, label %31

31:                                               ; preds = %28
  %32 = load i32, i32* %10, align 4
  store i32 %32, i32* %4, align 4
  store i32 1, i32* %12, align 4
  br label %43

33:                                               ; preds = %28, %23
  %34 = call %struct.encoding* @encoding_open(i8* %16)
  store %struct.encoding* %34, %struct.encoding** %11, align 8
  %35 = load %struct.encoding*, %struct.encoding** %11, align 8
  %36 = icmp ne %struct.encoding* %35, null
  br i1 %36, label %37, label %40

37:                                               ; preds = %33
  %38 = load %struct.encoding*, %struct.encoding** %11, align 8
  %39 = load %struct.encoding**, %struct.encoding*** %5, align 8
  store %struct.encoding* %38, %struct.encoding** %39, align 8
  br label %40

40:                                               ; preds = %37, %33
  br label %41

41:                                               ; preds = %40, %3
  %42 = load i32, i32* %10, align 4
  store i32 %42, i32* %4, align 4
  store i32 1, i32* %12, align 4
  br label %43

43:                                               ; preds = %41, %31
  %44 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %44)
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @parse_string(i8*, i8*, i32) #2

declare dso_local %struct.encoding* @encoding_open(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
